# pyDVL

./: .buildinfo  .bumpversion.cfg  .coveragerc  .gitattributes  .gitignore  .gitlab-ci.yml  .notebook_test_durations  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .test_durations  10-getting-started.html  20-install.html  30-data-valuation.html  40-influence.html  CHANGELOG.md  CITATION.cff  CNAME  CONTRIBUTING.md  MANIFEST.in  README-dev.md  README.md  azure-pipelines.yml  config.json  config.py  dask_torch.py  genindex.html  getting-started.html  git-split-temp  index.html  install.html  knn_shapley.html  knn_shapley.ipynb  min_example.py  min_example_2.py  mkdocs.yml  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  (+14 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cleanup-caches.yaml  main.yaml  publish.yaml  run-legacy-tests-workflow.yaml  run-notebook-tests-workflow.yaml  run-tests-workflow.yaml  stale.yaml  tox.yaml
0.10.0/: 404.html  objects.inv  sitemap.xml
0.10.0/CONTRIBUTING/: index.html
0.10.0/deprecated/: index.html
0.10.0/examples/: index.html
0.10.0/search/: search_index.json
0.10.0/value/: index.html
0.7.0/: 404.html  index.html  objects.inv  sitemap.xml
0.7.0/CHANGELOG/: index.html
0.7.0/assets/: pydvl.bib
0.7.0/css/: extra.css
0.7.0/influence/: index.html
0.7.0/search/: search_index.json
0.7.0/value/: index.html
0.7.1/: 404.html  index.html  objects.inv
0.7.1/CHANGELOG/: index.html
0.7.1/assets/: pydvl.bib
0.7.1/search/: search_index.json
0.7.1/value/: index.html
0.8.0/: 404.html
0.8.0/search/: search_index.json
0.8.1/: sitemap.xml
0.8.1/CONTRIBUTING/: index.html
0.8.1/value/: index.html
0.9.0/: sitemap.xml
0.9.0/CHANGELOG/: index.html
0.9.0/getting-started/: index.html
0.9.0/search/: search_index.json
0.9.1/: sitemap.xml
0.9.1/CONTRIBUTING/: index.html
0.9.1/search/: search_index.json
0.9.2/: 404.html  index.html  objects.inv  sitemap.xml
0.9.2/CONTRIBUTING/: index.html
0.9.2/examples/: index.html
7.0/: 404.html  index.html  objects.inv  sitemap.xml
7.0/CHANGELOG/: index.html
7.0/influence/: index.html
7.0/pydvl/: reporting.rst
_sources/: 20-install.rst.txt  30-data-valuation.rst.txt  40-influence.rst.txt  getting-started.rst.txt  index.rst.txt  install.rst.txt  knn_shapley.ipynb.txt
_static/: documentation_options.js
build_scripts/: copy_changelog.py  copy_contributing_guide.py  copy_notebooks.py  generate_api_docs.py  modify_binder_link.py  release-version.sh  run_pylint.py  update_docs.py
data/: .gitignore  adult_data_raw.pkl  top_hits_spotify_dataset.csv
devel/: 404.html  index.html  objects.inv  sitemap.xml
docs/: .gitignore  10-getting-started.md  10-getting-started.rst  20-install.md  20-install.rst  30-data-valuation.md  30-data-valuation.rst  40-influence.md  40-influence.rst  conf.py  getting-started.rst  index.md  index.rst  install.rst  methods.md  pydvl.bib
docs_includes/: abbreviations.md
examples/: data_utility_learning.html  index.html  influence_imagenet.html  influence_synthetic.html  influence_wine.html  influence_wine.ipynb  knn_shapley_flowers.html  knn_shapley_flowers.ipynb  least_core_basic.html  shapley_basic_spotify.html  shapley_basic_spotify.ipynb  shapley_knn_flowers.html  shapley_spotify.html  shapley_utility_learning.html  shapley_utility_learning.ipynb
latest/: 404.html  index.html
notebooks/: data_mislabel_correction_using_influence_functions.html  data_mislabel_correction_using_influence_functions.ipynb  data_oob.ipynb  data_shapley.ipynb  data_utility_learning.ipynb  example.ipynb  index.html  influence_distilbert.ipynb  influence_ekfac.ipynb  influence_gpt2.ipynb  influence_imagenet.ipynb  influence_sentiment_analysis.ipynb  influence_synthetic.html  influence_synthetic.ipynb  influence_wine.html  influence_wine.ipynb  influences.ipynb  knn_shapley.html  knn_shapley.ipynb  knn_shapley_flowers.html  knn_shapley_flowers.ipynb  lava_cifar10.ipynb  least_core_basic.ipynb  least_core_basic_new.ipynb  msr_banzhaf_digits.ipynb  msr_banzhaf_spotify.ipynb  neural_networks_using_influence_functions.html  neural_networks_using_influence_functions.ipynb  notebook_support.py  notebook_support_torch.py  plots.py  shapley_basic_spotify.ipynb  shapley_knn_flowers.ipynb  shapley_spotify.ipynb  shapley_utility_learning.ipynb  shorten_dataset_using_influence_functions.ipynb  test_notebooks.py
public/: index.html
pydvl/: index.html  influence.html  loo.html  reporting.html  shapley.html  utils.html  value.html
scripts/: run_sample.py
src/: __init__.py
tests/: cache.py  conftest.py  docker-compose.yml  misc.py  test_algorithms.py  test_influences.py  test_loo.py  test_models.py  test_notebooks.py  test_plugin.py  test_results.py  test_shapley.py  test_valuationresult.py  tolerate.py
valuation/: cli.html  dist_shapley.html  index.html  influence.html  loo.html  models.html  reporting.html  shapley.html  solve.html  utils.html
(+2054 files in other folders)
