[build-system]
# Must be kept in sync with `requirements.txt`
requires = [
    "setuptools >= 46.0.0",
    "setuptools_scm >= 2.0.0, <3"
]
build-backend = "setuptools.build_meta"

# Black-compatible settings for isort
# See https://black.readthedocs.io/en/stable/compatible_configs.html
[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--cov --cov-append --cov-report=term-missing"
testpaths = [
    "tests"
]
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli = true
log_level = "INFO"

[tool.coverage.run]
source = ["src/valuation"]

[tool.pylint.messages_control]
disable = [
    "I0011", # reasoning
]

[tool.pylint.master]
load-plugins = ["pylint_json2html"]

[tool.pylint.reports]
output-format = "jsonextended"

[tool.mypy]
mypy_path = './src/valuation'
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
