[build-system]
# Must be kept in sync with `requirements.txt`
requires = [
    "setuptools >= 46.0.0",
    "setuptools_scm >= 2.0.0, <3"
]
build-backend = "setuptools.build_meta"

# Black-compatible settings for isort
# See https://black.readthedocs.io/en/stable/compatible_configs.html
[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--failed-first --cov-report=term-missing --cov-report=xml --durations=30 --verbose"
testpaths = [
    "tests"
]
timeout = 300
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli = true
log_level = "INFO"
markers = [
    "torch: Mark a test function that uses PyTorch"
]
filterwarnings = "ignore::DeprecationWarning:pkg_resources.*:"

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.paths]
source = [
    "src/pydvl",
    "*/.tox/*/lib/python*/site-packages/pydvl",
    "*/.tox/pypy*/site-packages/pydvl",
    "*/.tox\\*\\Lib\\site-packages\tpydvl",
    "*/src/pydvl",
    "*\\src\\pydvl",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "\\#\\s*pragma: no cover",
    "^\\s*raise AssertionError\b",
    "^\\s*raise NotImplementedError\b",
    "^\\s*return NotImplemented\b",
    "^\\s*raise$",
    "^if __name__ == ['\"]__main__['\"]:$",
]

[tool.pylint.messages_control]
disable = [
    "I0011", # reasoning
]

[tool.pylint.master]
load-plugins = ["pylint_json2html"]

[tool.pylint.reports]
output-format = "jsonextended"

[tool.mypy]
python_version = "3.8"
mypy_path = './src/'
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.black]
line-length = 88
